[package]
name = "avila-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Ãvila Project"]
license = "MIT OR Apache-2.0"
description = "Sovereign cryptographic primitives with zero external dependencies"
repository = "https://github.com/avila-org/avila-crypto"
homepage = "https://avila.org"
documentation = "https://docs.rs/avila-crypto"
readme = "README.md"
keywords = ["cryptography", "crypto", "no-std", "zero-deps", "sovereign"]
categories = ["cryptography", "no-std"]

[dependencies]

[dev-dependencies]

[lib]
name = "avila_crypto"
path = "src/lib.rs"

[features]
default = []
std = []
