[package]
name = "avila-curve"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Elliptic curve operations (secp256k1, Ed25519)"
repository = "https://github.com/avilaops/arxis"
keywords = ["elliptic-curve", "secp256k1", "ed25519", "cryptography", "no-std"]
categories = ["cryptography", "no-std"]

[lib]
name = "avila_curve"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
avila-math = { path = "../avila-math" }
avila-bignum = { path = "../avila-bignum" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
