[package]
name = "avila-dataframe"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
description = "DataFrame 100% Rust nativo - Zero overhead, máxima performance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
documentation = "https://docs.rs/avila-dataframe"
keywords = ["dataframe", "rust", "native", "aviladb", "brasil"]

[lib]
name = "avila_dataframe"
path = "src/lib.rs"

[dependencies]
# Apenas o essencial
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Arrow ecosystem
arrow = { version = "53", features = ["prettyprint"] }
arrow-array = "53"
arrow-schema = "53"
arrow-csv = "53"
arrow-json = "53"
parquet = { version = "53", features = ["arrow"], optional = true }

# I/O básico
csv = "1.3"

# Concorrência
rayon = "1.10"

# Matemática básica
num-traits = "0.2"

# FFT (Fast Fourier Transform)
rustfft = "6.2"

# Datas
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (para AvilaDB)
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

# Compressão leve (opcional)
flate2 = { version = "1.0", optional = true }

# Error handling
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = ["csv", "json"]
full = ["default", "aviladb", "compression", "scientific"]

csv = []
json = []
aviladb = ["reqwest"]
compression = ["flate2"]
scientific = []

[[example]]
name = "quickstart_native"
required-features = []

[[example]]
name = "fft_native"
required-features = ["scientific"]
