[package]
name = "avila-dataframe"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
description = "DataFrame 100% Rust nativo - Zero overhead, máxima performance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
documentation = "https://docs.rs/avila-dataframe"
keywords = ["dataframe", "rust", "native", "aviladb", "brasil"]

[lib]
name = "avila_dataframe"
path = "src/lib.rs"

[dependencies]
# Apenas o essencial
avila-serde = { version = "0.2.0", path = "../avila-serde" }

# Arrow ecosystem
arrow = { version = "53", features = ["prettyprint"] }
arrow-array = "53"
arrow-schema = "53"
arrow-csv = "53"
arrow-json = "53"
parquet = { version = "53", features = ["arrow"], optional = true }

# I/O básico
csv = "1.3"

# Concorrência
avila-parallel = { version = "0.4.0", path = "../avila-parallel" }

# Matemática básica
num-traits = "0.2"

# FFT (Fast Fourier Transform)
avila-fft = { version = "0.3.0", path = "../avila-fft" }

# Datas
avila-time = { version = "0.1.0", path = "../avila-time" }

# HTTP client (para AvilaDB)
avila-http = { version = "0.1.0", path = "../avila-http", optional = true }

# Compressão leve (opcional)
flate2 = { version = "1.0", optional = true }

# Error handling
avila-error = { version = "0.2.0", path = "../avila-error" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = ["csv", "json"]
full = ["default", "aviladb", "compression", "scientific"]

csv = []
json = []
aviladb = ["avila-http"]
compression = ["flate2"]
scientific = []

[[example]]
name = "quickstart_native"
required-features = []

[[example]]
name = "fft_native"
required-features = ["scientific"]
