[package]
name = "aviladb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "AvilaDB - Globally distributed NoSQL database optimized for Brazil and LATAM"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
documentation = "https://docs.rs/aviladb"
readme = "README.md"
keywords = ["database", "nosql", "distributed", "vector-search", "brazil"]
categories = ["database", "database-implementations", "data-structures"]

[dependencies]
avila-async = { version = "0.5.0", path = "../avila-async" }
avila-serde = { version = "0.2.0", path = "../avila-serde" }
avila-error = { version = "0.2.0", path = "../avila-error" }
avila-id = { version = "0.1.0", path = "../avila-id" }
avila-rand = { version = "0.1.0", path = "../avila-rand" }
avila-crypto = { version = "0.1.0", path = "../avila-crypto" }

# Compression (internal) - Coming soon on crates.io
# avila-compress = { version = "0.3.0", path = "../avila-compress" }

# Networking
avila-web = { version = "0.1.0", path = "../avila-web" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
avila-http = { version = "0.1.0", path = "../avila-http" }
brotli = "7.0"

# Storage
# rocksdb = "0.22"  # Requires LLVM/Clang - optional for production use
bincode = "1.3"
sled = "0.34"  # Pure Rust embedded database

# Observability
avila-tracing = { version = "0.1.0", path = "../avila-tracing" }
tracing-subscriber = "0.3"
avx-telemetry = { version = "0.1", path = "../avx-telemetry" }

# Vector search
hnsw = { version = "0.11", optional = true }

# Multi-region
raft = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"
avila-time = { version = "0.1.0", path = "../avila-time" }
tempfile = "3.12"

[features]
default = ["vector-search"]
vector-search = ["hnsw"]
distributed = ["raft"]
full = ["vector-search", "distributed"]

# [[bench]]
# name = "database_ops"
# harness = false

# [[bench]]
# name = "query_performance"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]



