[package]
name = "avila-error"
version = "0.3.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Unified error system for Avila Platform - Layer 1, no_std compatible"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["error", "avila", "no-std", "embedded"]
categories = ["no-std", "embedded"]

[dependencies]
# Zero dependencies - pure no_std implementation

[features]
default = ["alloc"]
alloc = []  # Enable String and Vec support via alloc crate

[lib]
name = "avila_error"
path = "src/lib.rs"
