[package]
name = "avila-fft"
version = "0.3.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Ultimate performance FFT: SIMD, caching, advanced algorithms, parallel, streaming - Zero dependencies"
repository = "https://github.com/nicolas-avila/avila-fft"
homepage = "https://github.com/nicolas-avila/avila-fft"
documentation = "https://docs.rs/avila-fft"
keywords = ["fft", "dsp", "stft", "simd", "high-performance"]
categories = ["algorithms", "multimedia::audio", "science", "no-std"]
readme = "README.md"

[lib]
name = "avila_fft"
path = "src/lib.rs"

[[bin]]
name = "avila-fft"
path = "src/bin/avila-fft.rs"

[dependencies]
